fixed images on mobile stretching

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -37,20 +37,20 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 500;
 }
 
-.img-container {
-  width: 10rem;
+// .img-container {
+//   width: 10rem;
 
-  &.rounded {
-    img {
-      border-radius: 20px;
-    }
-  }
+//   &.rounded {
+//     img {
+//       border-radius: 20px;
+//     }
+//   }
 
-  img {
-    max-width: 100%;
-    max-height: 100%;
-  }
-}
+//   img {
+//     max-width: 100%;
+//     max-height: 100%;
+//   }
+// }
 .extra {
   grid-column: 9/13;
 
